# Jikken

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/jikken/: commandQueue.hpp  commands.hpp  enums.hpp  graphicsDevice.hpp  jikken.hpp  memory.hpp  structs.hpp  types.hpp
src/: commandQueue.cpp  commands.cpp  graphicsDevice.cpp  graphicsDevice.hpp  jikken.cpp  shaderUtils.cpp  shaderUtils.hpp
src/GL/: GLContext_glx.cpp  GLContext_glx.hpp  GLContext_nsgl.hpp  GLContext_nsgl.mm  GLContext_wgl.cpp  GLContext_wgl.hpp  GLGraphicsDevice.cpp  GLGraphicsDevice.hpp  GLUtil.cpp  GLUtil.hpp
src/d3d11/: D3D11GraphicsDevice.cpp  D3D11GraphicsDevice.hpp  D3D11Util.cpp  D3D11Util.hpp
src/vulkan/: VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.hpp  VulkanStructs.hpp  VulkanUtil.cpp  VulkanUtil.hpp
